live-stream-frame-analytics/k8s-dev/pod-svc-vs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gradio-stream-demo
  labels:
    app: gradio-stream-demo
spec:
  containers:
    - name: gradio
      image: mendeza/gradio_stream_demo:0.0.1
      ports:
        - containerPort: 7860
      resources:
        requests:
          cpu: "4"
          memory: "10Gi"
        limits:
          cpu: "4"
          memory: "10Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: gradio-stream-service
spec:
  selector:
    app: gradio-stream-demo
  ports:
    - protocol: TCP
      port: 7860
      targetPort: 7860
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: gradio-stream-virtualservice
  namespace: andrew-mendez-94dbc511
spec:
  hosts:
    - *.ingress.pcai0109.sv11.hpecolo.net
  gateways:
    - istio-system/ezaf-gateway
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: gradio-stream-service.andrew-mendez-94dbc511.svc.cluster.local
            port:
              number: 7860
